Painel de integração

--- a/contatos.html
+++ b/contatos.html
@@ -33,7 +33,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre</a>
                     </li>
-                
+                    <li class="nav-item">
+                        <a class="nav-link" href="avaliacoes.html">Avaliações</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faq.html">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+    
                 </ul>
             </div>
         </div>
@@ -42,12 +51,12 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card-body">
-                    <h4>Nome</h4>
-                    <p>Booksmatch</p>
                     <h4>Instagram</h4>
                     <p>@BooksMatch</p>
                     <h4>Telefone</h4>
-                    <p>+55 047 92920-8843</p>
+                    <p>+55 3443-0897</p>
+                    <h4>Whatsapp</h4>
+                    <p>+55 (47) 99854-5954</p>
                     <h4>Email</h4>
                     <p>LivrariaBooksMatch@gmail.com</p>
                 </div>
