--- a/index.html
+++ b/index.html
@@ -45,11 +45,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="avaliacoes.html">Avaliações</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faq.html">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">login</a>
+                    </li>
+                    
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Pesquise" aria-label="Search">
                     <button class="btn btn-dark" type="submit">Pesquise</button>
-                </form>
+                </form><p></p>
+                
             </div>
         </div>
     </nav>
